[package]
name = "sokoke"
version = "0.0.2"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Web application framework"
license = "MIT"
documentation = "https://docs.rs/sokoke"
repository = "https://github.com/ichigo-dev/sokoke"


[dependencies]
hyper = "0.14.27"
regex = "1.10.2"
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "time",
    "net"
]}
